--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "Faker": "^0.7.2",
     "better-scroll": "^2.2.1",
     "core-js": "^3.10.0",
     "kindeditor": "^4.1.10",
